Alpha 0.1.8.6
- Connected blocks (i.e. fences, iron bars, panes, etc) now stay connected in portcullises, sliding doors, and elevators.

Alpha 0.1.8.5
- Added permission node "bigdoors.admin.bypasscompat" to bypass compatibility stuff like WorldGuard and PlotSquared )door creation and toggling).
- OPs also bypass compatibility stuff.
- When a compatibility hook doesn't allow you to create a door somewhere, you'll now be notified which specific hook is blocking access.

Alpha 0.1.8.4
- Fixes potential issues caused by accidental inclusion of experimental code.

Alpha 0.1.8.3
- Fixed incorrect import. Thanks, @mmuziek for the bug report!

Alpha 0.1.8.2
- Added plugin.yml again. Thanks, @mmuziek for the bug report!

Alpha 0.1.8.1
- Added support for version 1.14 of Minecraft.
- Fixed (harmless) error on startup when using non-default language file.
- Fixed plugin breaking when depending on a broken compatibility plugin (e.g. WorldGuard). Thanks, @kristinr96 for the bug report!
- Fixed plugin breaking when Vault was enabled but not hooked into an economy plugin. Thanks, @kristinr96 for the bug report!

Alpha 0.1.8
- Added "/BigDoors restart" to reload the config and the translation file and generally reinitialize everything.
- "/BigDoors" no longer opens GUI. Use "/BDM" or "/BigDoors Menu" instead. 
- Added (very) basic help menu for /BigDoors.
- Fixed translation for setting close timer. Thanks, @WHiZSTA.
- Doors can now go through water and lava.
- Added DEBUG option in the config that you should not use!! Just leave it on false.
- Made update checking a little less frequent (once every 4h now (and on startup) instead of every 30 mins).
- Fixed incompatibility with Wireless Redstone. Thanks, @DaniRadio for the bug report!
- Fixed terracotta accidentally being blacklisted in <1.13.*. Thanks, @Minestick for the bug report! 
- Added "/fillDoor" command to quickly generate doors.
- Added sliding door and elevator door types. Note that you cannot ride elevators (yet)!